--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,3 +20,6 @@
 @import './particles/clear-list';
 @import './particles/detail-card-main-section';
 @import './particles/detail-slider';
+@import './particles/location';
+@import './particles/parent-card';
+@import './particles/social-link';
