--- a/styles/particles/_detail-card-main-section.scss
+++ b/styles/particles/_detail-card-main-section.scss
@@ -16,7 +16,7 @@
     }
 
     &:hover {
-      path {
+      path, line {
         stroke: $mainHover;
       }
 
@@ -26,7 +26,7 @@
     }
 
     &:active {
-      path {
+      path, line {
         stroke: $mainClick;
       }
 
@@ -47,5 +47,61 @@
     width: 100%;
     margin-top: 12px;
     margin-bottom: 32px;
+  }
+  &__slider{
+    width: calc(66% - 30px);
+    margin-right: 30px;
+  }
+  &__info{
+    width: 33%;
+  }
+  &__main-row{
+    justify-content: space-between;
+    display: flex;
+  }
+  &__cost{
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+  &__farm{
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+  &__desc{
+    margin-top: 12px;
+    margin-bottom: 26px;
+  }
+  &__table{
+    margin-top: 30px;
+  }
+  &__table-title{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 200%;
+  }
+  &__table-item{
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 20px;
+
+    &:nth-child(odd){
+      background: $grayBG;
+    }
+  }
+  &__desc-section{
+    margin-top: 15px;
+  }
+  &__sub-title{
+    margin-top: 38px;
+    margin-bottom: 18px;
+  }
+  &__cards{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__card-wrapper{
+    width: calc(50% - 15px);
   }
 }
