--- a/styles/particles/_detail-slider.scss
+++ b/styles/particles/_detail-slider.scss
@@ -1,25 +1,87 @@
 .detail-slider {
   &__main {
-    width: 730px;
+    width: 100%;
     height: 530px;
   }
+  &__arrow{
+    position: absolute;
+    top: 50%;
+    width: 65px;
+    height: 65px;
+    border-radius:50%;
+    background: rgba(255, 255, 255, 0.7);
+    box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-50%);
+    cursor: pointer;
+    transition: background .3s;
 
+    &:hover{
+      background: $white;
+    }
+    &:active{
+      path{
+        stroke: #7A2F03;
+      }
+    }
+
+    &_left{
+      left: 10px;
+      svg{
+        margin-left: -4px;
+      }
+    }
+    &_right{
+      right: 10px;
+      svg{
+        margin-right: -4px;
+      }
+    }
+    &.detail-slider__arrow_disabled{
+      background: rgba(255, 255, 255, 0.7);
+      box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
+      cursor: auto;
+
+      path {
+        stroke: $gray;
+      }
+    }
+  }
+  &__main-wrapper{
+    position: relative;
+    margin-bottom: 30px;
+  }
   &__main-item {
-    width: 730px;
+    width: 100%;
     height: 530px;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
+    margin-right: 30px;
   }
 
   &__nav-item {
+    cursor: pointer;
     width: 122px;
     height: 120px;
-    margin-right: 40px;
+    margin-right: 30px;
     background-position: center;
     background-size: cover;
+    border-radius: 10px;
+    transition: opacity .3s;
+    
+    &:not(.is-selected){
+      opacity: .6;
+    }
+
+    &:hover{
+      opacity: 1;
+    }
   }
 
   &__nav {
-    width: 730px;
+    width: 100%;
   }
 }
