--- a/styles/particles/_drop-down.scss
+++ b/styles/particles/_drop-down.scss
@@ -1,9 +1,9 @@
 .drop-down {
   background: $white;
-  border-radius: 10px;
+  border-radius: 0.625vw;
   position: relative;
   width: 100%;
-  height: 50px;
+  height: 3.125vw;
   display: flex;
   align-items: center;
   border: 2px solid transparent;
@@ -14,9 +14,9 @@
 
   .scrollbar-track-y {
     right: 6px;
-    height: calc(100% - 20px);
-    top: 10px;
-    bottom: 10px;
+    height: calc(100% - 1.25vw);
+    top: 0.625vw;
+    bottom: 0.625vw;
     overflow: hidden;
     border-radius: 4px;
     background-color: transparent;
@@ -28,7 +28,7 @@
 
     .drop-down {
       &__list-wrapper {
-        max-height: 200px;
+        max-height: 12.5vw;
         visibility: visible;
       }
     }
@@ -37,18 +37,18 @@
 
   &__arrow {
     position: absolute;
-    right: 22px;
+    right: 1.375vw;
     cursor: pointer;
   }
 
   &__input {
-    border: 1.5px solid #CBCBCB;
-    padding: 0 47px;
+    border: 2px solid #CBCBCB;
+    padding: 0 2.9375vw;
     width: 100%;
     height: 100%;
     border: none;
     background: $white;
-    border-radius: 10px;
+    border-radius: 0.625vw;
     position: relative;
 
     &::placeholder {
@@ -58,14 +58,19 @@
 
   &__placeholder-img {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 1.25vw;
+    height: 1.25vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    left: 18px;
+    left: 1.125vw;
     top: 50%;
     transform: translateY(-50%);
+
+    svg{
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__list-wrapper {
@@ -76,7 +81,7 @@
     max-height: 0px;
     background: $white;
     box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
-    border-radius: 10px;
+    border-radius: 0.625vw;
     visibility: hidden;
     transition: max-height .3s, visibility .3s;
   }
@@ -84,7 +89,7 @@
   &__item {
     display: flex;
     align-items: center;
-    padding: 10px 20px;
+    padding: 0.625vw 1.25vw;
 
     &:hover {
       background-color: $mainColor;
@@ -102,7 +107,66 @@
   }
 
   &__item-img-wrapper {
-    width: 20px;
-    height: 20px;
+    width: 1.25vw;
+    height: 1.25vw;
+  }
+}
+@media screen and (max-width:1600px) {
+  .drop-down {
+    border-radius: 10px;
+    height: 50px;
+  
+    .scrollbar-track-y {
+      right: 6px;
+      height: calc(100% - 20px);
+      top: 10px;
+      bottom: 10px;
+      border-radius: 4px;
+    }
+  
+    &_active {  
+      .drop-down {
+        &__list-wrapper {
+          max-height: 200px;
+        }
+      }
+  
+    }
+  
+    &__arrow {
+      right: 22px;
+    }
+  
+    &__input {
+      padding: 0 47px;
+      border-radius: 10px;
+  
+      &::placeholder {
+        color: $black;
+      }
+    }
+  
+    &__placeholder-img {
+      width: 20px;
+      height: 20px;
+      left: 18px;
+    }
+  
+    &__list-wrapper {
+      border-radius: 10px;
+    }
+  
+    &__item {
+      padding: 10px 20px;
+    }
+  
+    &__item-text {
+      margin-left: 9px;
+    }
+  
+    &__item-img-wrapper {
+      width: 20px;
+      height: 20px;
+    }
   }
 }
