--- a/styles/particles/_footer.scss
+++ b/styles/particles/_footer.scss
@@ -3,15 +3,39 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 200px;
+  margin-top: 12.5vw;
   background-color: $grayBG;
 
   &__logo {
-    margin: 20px 0;
+    margin: 1.25vw 0;
+    img{
+      width: 5.625vw;
+    }
   }
-
+  &__link {
+    margin-right: 1.875vw;
+  }
   &__cop {
-    margin-top: 20px;
-    margin-bottom: 16px;
+    margin-top: 1.25vw;
+    margin-bottom: 1vw;
+  }
+}
+@media screen and (max-width:1600px) {
+  .footer {
+    margin-top: 200px;
+  
+    &__logo {
+      margin: 20px 0;
+      img{
+        width: 90px;
+      }
+    }
+    &__link {
+      margin-right: 30px;
+    }
+    &__cop {
+      margin-top: 20px;
+      margin-bottom: 16px;
+    }
   }
 }
