--- a/styles/particles/_icons.scss
+++ b/styles/particles/_icons.scss
@@ -1,6 +1,6 @@
 .icon {
-  width: 40px;
-  height: 40px;
+  width: 2.35294117647vw;
+  height: 2.35294117647vw;
 
   border: none;
   border-radius: 10px;
@@ -30,13 +30,34 @@
 
   &__img {
     &_favorite {
-      width: 23px;
-      height: 20px;
+      width: 1.35294117647vw;
+      height: 1.17647058823vw;
     }
 
     &_comparison {
-      width: 38px;
-      height: 20px;
+      width: 2.235294117647vw;
+      height: 1.17647058823vw;
     }
   }
+}
+
+@media screen and (max-width:1700px) {
+  .icon {
+    width: 40px;
+    height: 40px;
+  
+    border-radius: 10px;
+
+    &__img {
+      &_favorite {
+        width: 23px;
+        height: 20px;
+      }
+  
+      &_comparison {
+        width: 38px;
+        height: 20px;
+      }
+    }
+  }  
 }
