--- a/styles/particles/_new-items-section.scss
+++ b/styles/particles/_new-items-section.scss
@@ -1,22 +1,22 @@
 .new-items-section {
-  margin-top: 160px;
+  margin-top: 10vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   &__card-wrapper {
-    width: calc(33% - 20px);
+    width: calc(25% - 23px);
     margin-right: 30px;
     margin-bottom: 30px;
 
-    &:nth-child(3n) {
+    &:nth-child(4n) {
       margin-right: 0;
     }
   }
 
   &__desc {
-    margin-top: 14px;
-    margin-bottom: 45px;
+    margin-top: 0.875vw;
+    margin-bottom: 2.8125vw;
     display: inline-block;
   }
 
@@ -26,7 +26,46 @@
   }
 
   &__button-wrapper {
-    width: 350px;
-    margin-top: 60px;
+    width: 33%;
+    margin-top: 3.75vw;
   }
+}
+@media screen and (max-width:1700px) {
+  .new-items-section {
+    margin-top: 10vw;
+  
+    &__card-wrapper {
+      width: calc(25% - 15px);
+      margin-right: 15px;
+      margin-bottom: 15px;
+    }
+  }
+}
+
+@media screen and (max-width:1600px) {
+  .new-items-section {
+    margin-top: 160px;
+  
+    &__card-wrapper {
+      width: calc(33% - 20px);
+      margin-right: 30px;
+      margin-bottom: 30px;
+
+      &:nth-child(4n) {
+        margin-right: 30px;
+      }
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+    }
+  
+    &__desc {
+      margin-top: 14px;
+      margin-bottom: 45px;
+    }
+  
+    &__button-wrapper {
+      margin-top: 60px;
+    }
+  }  
 }
