--- a/styles/particles/_first-section.scss
+++ b/styles/particles/_first-section.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   position: relative;
+  overflow: hidden;
   background: #EFEFEF;
 
   &__bg {
@@ -19,9 +20,13 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-
+  &__sub-title{
+    text-align: center;
+  }
   &__img-wrapper {
     width: 62.5vw;
+    position: relative;
+    z-index: 1;
   }
 
   &__input-row {
@@ -53,6 +58,7 @@
 
   &__title {
     margin-bottom: 4.296875vh;
+    text-align: center;
   }
 
   &__main-button {
@@ -67,11 +73,12 @@
     }
   
     &__input-row {
+      margin-top: 50px;
       width: 1110px;
     }
   
     &__buttons-row {
-      margin-top: 44px;
+      margin-top: 30px;
     }
   
     &__drop-down {
@@ -85,11 +92,79 @@
     }
   
     &__title {
-      margin-bottom: 44px;
+      margin-bottom: 30px;
     }
   
     &__main-button {
       margin-right: 30px;
+    }
+  }
+}
+
+@media screen and (max-width:1280px) {
+  .first-section {  
+    &__img-wrapper {
+      width: calc(100% - 300px);
+    }
+    &__title {
+      margin-bottom: 20px;
+    }
+    &__input-row {
+      margin-top: 40px;
+      width: 100%;
+    }
+
+    &__buttons-row {
+      margin-top: 20px;
+    }
+
+    &__drop-down {
+      &_margin-horizontal{
+        margin: 0 20px;
+      }
+    }
+  }
+}
+@media screen and (max-width:900px) {
+  .first-section{
+    &__input-row{
+      flex-direction: column;
+      margin-top: 30px;
+    }
+    &__drop-down{
+      &_margin-horizontal{
+        margin: 30px 0;
+      }
+    }
+    &__buttons-row{
+      flex-direction: column;
+      margin-top: 30px;
+    }
+    &__main-button{
+      margin-right: 0;
+      margin-bottom: 20px;
+    }
+    &__inner{
+      padding-left: 14px;
+      padding-right: 14px;
+      width: 100%;
+      margin-top: 130px;
+    }
+    &__img-wrapper{
+      width: 580px;
+    }
+    &__bg{
+      background-image: url('../../media/bg-first-m.svg');
+    }
+    &__sub-title{
+      line-height: 167%;
+    }
+  }
+}
+@media screen and (max-width:600px) {
+  .first-section{
+    &__img-wrapper{
+      width: 500px;
     }
   }
 }
