--- a/styles/particles/_new-items-section.scss
+++ b/styles/particles/_new-items-section.scss
@@ -1,5 +1,5 @@
 .new-items-section {
-  margin-top: 10vw;
+  margin-top: 6.25vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,9 +15,13 @@
   }
 
   &__desc {
+    text-align: center;
     margin-top: 0.875vw;
     margin-bottom: 2.8125vw;
     display: inline-block;
+  }
+  &__title{
+    text-align: center;
   }
 
   &__list {
@@ -44,7 +48,7 @@
 
 @media screen and (max-width:1600px) {
   .new-items-section {
-    margin-top: 160px;
+    margin-top: 100px;
   
     &__card-wrapper {
       width: calc(33% - 20px);
@@ -68,4 +72,70 @@
       margin-top: 60px;
     }
   }  
+}
+@media screen and (max-width:1280px) {
+  .new-items-section {
+    &__card-wrapper {
+      width: calc(33% - 13px);
+      margin-right: 20px;
+      margin-bottom: 20px;
+
+      &:nth-child(4n) {
+        margin-right: 20px;
+      }
+    }
+    &__button-wrapper {
+      margin-top: 40px;
+    }
+  }
+}
+@media screen and (max-width:900px) {
+  .new-items-section {
+    margin-top: 50px;
+    &__desc {
+      margin-top: 14px;
+      margin-bottom: 30px;
+    }
+    &__card-wrapper {
+      width: calc(50% - 15px);
+      margin-right: 30px;
+      margin-bottom: 30px;
+
+      &:nth-child(4n) {
+        margin-right: 30px;
+      }
+      &:nth-child(3n) {
+        margin-right: 30px;
+      }
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+    }
+    &__button-wrapper{
+      width: 50%;
+      margin-top: 20px;
+    }
+  }
+}
+@media screen and (max-width:600px) {
+  .new-items-section {
+    &__card-wrapper {
+      width: 100%;
+      margin-right: 0px;
+      margin-bottom: 30px;
+
+      &:nth-child(4n) {
+        margin-right: 0px;
+      }
+      &:nth-child(3n) {
+        margin-right: 0px;
+      }
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+    }
+    &__button-wrapper{
+      width: 100%;
+    }
+  }
 }
