--- a/styles/particles/_bread-crumbs.scss
+++ b/styles/particles/_bread-crumbs.scss
@@ -2,6 +2,9 @@
   &__ul {
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 0 14px;
   }
 
   &__separator {
