--- a/styles/particles/_card.scss
+++ b/styles/particles/_card.scss
@@ -4,7 +4,8 @@
   border: 2px solid $gray;
   overflow: hidden;
   border-radius: 0.625vw;
-  display: block;
+  display: flex;
+  flex-direction: column;
   cursor: pointer;
   transition: box-shadow .3s;
 
