--- a/styles/particles/_filters.scss
+++ b/styles/particles/_filters.scss
@@ -1,12 +1,8 @@
 .filters {
-  min-width: calc(33% - 20px);
-  margin-right: 30px;
-
+  width: 100%;
   &__title {
     margin-bottom: 20px;
-    font-style: normal;
     font-weight: 600;
-    font-size: 16px;
 
     &:not(:first-of-type) {
       margin-top: 30px;
@@ -32,5 +28,29 @@
 
   &__button {
     margin-top: 30px;
+  }
+}
+
+@media screen and (max-width:1700px) {
+  .filters {  
+    &__title {
+      margin-bottom: 20px;
+  
+      &:not(:first-of-type) {
+        margin-top: 30px;
+      }
+    }
+  
+    &__checkbox-wrapper {
+      margin-bottom: 2px;
+    }
+  
+    &__show-all {
+      margin-top: 20px;
+    }
+  
+    &__button {
+      margin-top: 30px;
+    }
   }
 }
