--- a/styles/particles/_footer.scss
+++ b/styles/particles/_footer.scss
@@ -47,6 +47,7 @@
 
 @media screen and (max-width:600px) {
   .footer{
+    margin-top: 100px;
     &__link{
       margin-right: 0;
       margin-bottom: 20px;
