--- a/styles/particles/_header.scss
+++ b/styles/particles/_header.scss
@@ -11,11 +11,12 @@
   transition: background-color .3s;
 
   &_active {
-    background-color: $white;
+    background-color: $grayBG;
   }
 
   &__logo {
     width: 13.75vw;
+
     a{
       height: 2.5vw;
       width: 5.6875vw;
@@ -172,10 +173,13 @@
     width: 100%;
     height: 100vh;
     background-color: $grayBG;
-    position: absolute;
-    top: -100vh;
+    position: fixed;
+    z-index: 99;
+    top: 0;
     left: 0;
     transition: transform .5s;
+    opacity: 0;
+    visibility: hidden;
 
     &__li{
       margin-top: 30px;
@@ -184,13 +188,15 @@
 
     &__separator{
       height: 2px;
+      min-height: 2px;
       width: 100%;
       background-color: $gray;
       margin-top: 30px;
     }
 
     &_active{
-      transform: translateY(100%);
+      opacity: 1;
+      visibility: visible;
     }
   }
   .burger-button{
@@ -245,5 +251,20 @@
         transform: translateY(-10px);
       }
     }
+  }
+}
+@media screen and (max-width:600px) {
+  .header{
+    height: 56px;
+  }
+}
+@media screen and (max-height:560px) {
+  .header{
+    height: 56px;
+  }
+  .burger-menu{
+    padding-top: 76px;
+    padding-bottom: 20px;
+    overflow: auto;
   }
 }
