--- a/styles/particles/_range-input.scss
+++ b/styles/particles/_range-input.scss
@@ -11,7 +11,7 @@
     position: relative;
     border: 2px solid #CBCBCB;
     box-sizing: border-box;
-    border-radius: 10px;
+    border-radius: 0.625vw;
     overflow: hidden;
   }
 
@@ -25,8 +25,8 @@
   &__input {
     width: 100%;
     height: 100%;
-    padding: 9px;
-    padding-left: 44px;
+    padding: 0.785vw;
+    padding-left: 2.75vw;
     border: none;
 
     &::-webkit-outer-spin-button,
@@ -91,6 +91,45 @@
     &:active {
       background-color: $mainClick;
       border: 3px solid $mainClick;
+    }
+  }
+}
+@media screen and (max-width:1600px) {
+  .range-input {
+    padding-bottom: 10px;
+  
+    &__input-wrapper {
+      border-radius: 10px;
+    }
+  
+    &__desc {
+      left: 20px;
+    }
+  
+    &__input {
+      padding: 9px;
+      padding-left: 44px;
+    }
+  
+    &__separator {
+      width: 8px;
+      height: 2px;
+      margin: 0 10px;
+    }
+  
+    &__line {
+      height: 3px;
+      margin-top: 32px;
+      border-radius: 2px;
+    }
+  
+    &__line-path {
+      width: calc(100% - 40px);
+    }
+  
+    &__circle {
+      height: 20px;
+      width: 20px;
     }
   }
 }
