--- a/styles/particles/_search-main-section.scss
+++ b/styles/particles/_search-main-section.scss
@@ -3,19 +3,33 @@
   margin-top: 95px;
 
   &__item-wrapper {
-    width: calc(50% - 15px);
+    width: calc(33.33333% - 20px);
     margin-bottom: 30px;
+    margin-right: 30px;
 
-    &:nth-child(2n - 1) {
-      margin-left: 30px;
+    &:nth-child(3n + 2) {
+      margin-right: 0;
     }
+  }
+  &__button-img{
+    margin-right: 10px;
+  }
+  &__filters-modal{
+    display: none;
+  }
+  &__filters-button{
+    display: none;
+  }
+  &__filters-wrapper{
+    min-width: calc(25% - 23px);
+    margin-right: 30px;
   }
 
   &__count {
     background: $grayBG;
     width: 100%;
     border-radius: 10px;
-    padding: 9px 20px;
+    padding: 0.5625vw 1.25vw;
     margin-bottom: 30px;
   }
 
@@ -29,6 +43,112 @@
     width: 100%;
     display: flex;
     align-items: center;
-    margin-top: 90px;
+    margin-top: 60px;
+  }
+}
+@media screen and (max-width:1700px) {
+  .search-main-section {
+    margin-top: 95px;
+
+    &__filters-wrapper{
+      min-width: calc(33% - 20px);
+    }
+  
+    &__item-wrapper {
+      width: calc(50% - 15px);
+      margin-bottom: 30px;
+
+      &:nth-child(3n + 2) {
+        margin-right: 30px;
+      }
+  
+      &:nth-child(2n + 2) {
+        margin-right: 0;
+      }
+    }
+  
+    &__count {
+      border-radius: 10px;
+      padding: 12px 20px;
+      margin-bottom: 30px;
+    }
+  
+    &__pagination-wrapper {
+      margin-top: 90px;
+    }
+  }
+}
+@media screen and (max-width:1000px) {
+  .search-main-section {
+    margin-top: 50px;
+
+    &__filters-wrapper{
+      display: none;
+    }
+    &__filters-modal{
+      display: block;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      z-index: 101;
+      background-color: $white;
+      overflow: auto;
+      padding-bottom: 30px;
+      opacity: 0;
+      visibility: hidden;
+      &_active{
+        opacity: 1;
+        visibility: visible;  
+      }
+    }
+    &__filters-modal-title-wrapper{
+      width: 100%;
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      padding-top: 16px;
+      padding-bottom: 16px;
+      border-bottom: 2px solid $gray;
+      margin-bottom: 30px;
+      position: relative;
+    }
+    &__filters-modal-title{
+      font-weight: 600;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+      display: flex;
+      align-items: center;
+    }
+    &__filters-button{
+      display: block;
+      width: 100%;
+      margin-bottom: 30px;
+    }
+    &__pagination-wrapper{
+      margin-top: 30px;
+      justify-content: center;
+    }
+  }
+}
+
+@media screen and (max-width:660px) {
+  .search-main-section {  
+    &__item-wrapper {
+      width: 100%;
+      margin-bottom: 30px;
+      margin-right: 0;
+
+      &:nth-child(3n + 2) {
+        margin-right: 0px;
+      }
+  
+      &:nth-child(2n + 2) {
+        margin-right: 0;
+      }
+    }
   }
 }
