--- a/styles/particles/_detail-card-main-section.scss
+++ b/styles/particles/_detail-card-main-section.scss
@@ -1,5 +1,5 @@
 .detail-card-main-section {
-  margin-top: 95px;
+  margin-top: 60px;
 
   &__title {
     margin-top: 16px;
@@ -39,6 +39,9 @@
   &__buttons {
     display: flex;
     width: 33%;
+    &_mobile{
+      display: none;
+    }
   }
 
   &__row-head {
@@ -76,7 +79,7 @@
   }
   &__table-title{
     font-weight: 600;
-    font-size: 14px;
+    font-size: 0.875vw;
     line-height: 200%;
   }
   &__table-item{
@@ -92,6 +95,7 @@
   }
   &__desc-section{
     margin-top: 15px;
+    width: calc(66% - 30px);
   }
   &__sub-title{
     margin-top: 38px;
@@ -103,5 +107,109 @@
   }
   &__card-wrapper{
     width: calc(50% - 15px);
+  }
+}
+@media screen and (max-width:1600px) {
+  .detail-card-main-section {
+    margin-top: 60px;
+  
+    &__title {
+      margin-top: 16px;
+    }
+  
+    &__button-item {
+      margin-right: 30px;
+  
+      .text {
+        margin-left: 9px;
+      }
+    }
+  
+    &__row-head {
+      margin-top: 12px;
+      margin-bottom: 32px;
+    }
+    &__slider{
+      width: calc(66% - 30px);
+      margin-right: 30px;
+    }
+    &__cost{
+      margin-top: 24px;
+      margin-bottom: 24px;
+    }
+    &__farm{
+      margin-top: 12px;
+      margin-bottom: 12px;
+    }
+    &__desc{
+      margin-top: 12px;
+      margin-bottom: 26px;
+    }
+    &__table{
+      margin-top: 30px;
+    }
+    &__table-title{
+      font-size: 14px;
+    }
+    &__table-item{
+      border-radius: 10px;
+      padding: 8px 20px;
+    }
+    &__desc-section{
+      margin-top: 15px;
+      width: calc(66% - 30px);
+    }
+    &__sub-title{
+      margin-top: 38px;
+      margin-bottom: 18px;
+    }
+    &__card-wrapper{
+      width: calc(50% - 15px);
+    }
+  }
+}
+@media screen and (max-width:1000px) {
+  .detail-card-main-section{
+    &__main-row{
+      flex-direction: column;
+    }
+    &__slider{
+      width: 100%;
+    }
+    &__info{
+      margin-top: 32px;
+      width: 100%;
+    }
+    &__desc-section{
+      width: 100%;
+    }
+    &__buttons{
+      width: 100%;
+      margin-bottom: 32px;
+      &_desktop{
+        display: none;
+      }
+      &_mobile{
+        display: flex;
+      }
+    }
+  }
+}
+@media screen and (max-width:600px) {
+  .detail-card-main-section{
+    &__cards{
+      flex-direction: column;
+    }
+    &__button-item{
+      &:last-of-type{
+        margin-right: 0;
+      }
+    }
+    &__card-wrapper{
+      width: 100%;
+      &:not(:last-of-type){
+        margin-bottom: 32px;
+      }
+    }
   }
 }
