--- a/styles/particles/_detail-slider.scss
+++ b/styles/particles/_detail-slider.scss
@@ -1,13 +1,13 @@
 .detail-slider {
   &__main {
     width: 100%;
-    height: 530px;
+    height: 33.125vw;
   }
   &__arrow{
     position: absolute;
     top: 50%;
-    width: 65px;
-    height: 65px;
+    width: 4.0625vw;
+    height: 4.0625vw;
     border-radius:50%;
     background: rgba(255, 255, 255, 0.7);
     box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
@@ -28,13 +28,13 @@
     }
 
     &_left{
-      left: 10px;
+      left: 0.625vw;
       svg{
         margin-left: -4px;
       }
     }
     &_right{
-      right: 10px;
+      right: 0.625vw;
       svg{
         margin-right: -4px;
       }
@@ -55,21 +55,21 @@
   }
   &__main-item {
     width: 100%;
-    height: 530px;
+    height: 33.125vw;
     background-position: center;
     background-size: cover;
-    border-radius: 10px;
+    border-radius: 0.625vw;
     margin-right: 30px;
   }
 
   &__nav-item {
     cursor: pointer;
-    width: 122px;
-    height: 120px;
+    width: 7.5vw;
+    height: 7.5vw;
     margin-right: 30px;
     background-position: center;
     background-size: cover;
-    border-radius: 10px;
+    border-radius: 0.625vw;
     transition: opacity .3s;
     
     &:not(.is-selected){
@@ -80,8 +80,84 @@
       opacity: 1;
     }
   }
-
   &__nav {
     width: 100%;
+  }
+  .flickity-page-dots{
+    display: none;
+  }
+}
+@media screen and (max-width:1600px) {
+  .detail-slider {
+    &__main {
+      height: 530px;
+    }
+    &__arrow{
+      width: 65px;
+      height: 65px;
+  
+      &_left{
+        left: 10px;
+        svg{
+          margin-left: -4px;
+        }
+      }
+      &_right{
+        right: 10px;
+        svg{
+          margin-right: -4px;
+        }
+      }
+    }
+    &__main-wrapper{
+      margin-bottom: 30px;
+    }
+    &__main-item {
+      height: 530px;
+      border-radius: 10px;
+      margin-right: 30px;
+    }
+  
+    &__nav-item {
+      width: 122px;
+      height: 120px;
+      margin-right: 30px;
+      border-radius: 10px;
+    }
+  }
+}
+@media screen and (max-width:600px) {
+  .detail-slider {
+    &__nav{
+      display: none;
+    }
+    &__arrow{
+      display: none;
+    }
+    &__main{
+      height: 360px;
+    }
+    &__main-item{
+      height: 360px;
+    }
+    &__main-wrapper{
+      margin-bottom: 0;
+    }
+    .flickity-page-dots{
+      display: block;
+      bottom: 20px;
+      width: auto;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .dot{
+      height: 7px;
+      width: 7px;
+      background-color: $white;
+      opacity: 1;
+      &.is-selected{
+        background-color: $mainColor;
+      }
+    }
   }
 }
