--- a/styles/particles/_favorites-main-section.scss
+++ b/styles/particles/_favorites-main-section.scss
@@ -8,6 +8,7 @@
   &__row {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     margin-top: 12px;
     margin-bottom: 32px;
@@ -19,11 +20,11 @@
   }
 
   &__item-wrapper {
-    width: calc(33% - 20px);
+    width: calc(25% - 23px);
     margin-right: 30px;
     margin-bottom: 30px;
 
-    &:nth-child(3n) {
+    &:nth-child(4n) {
       margin-right: 0;
     }
   }
@@ -33,5 +34,79 @@
     display: flex;
     justify-content: center;
     margin-top: 90px;
+  }
+}
+@media screen and (max-width:1700px) {
+  .favorites-main-section {
+    margin-top: 95px;
+  
+    &__title {
+      margin-top: 16px;
+    }
+  
+    &__row {
+      width: 100%;
+      margin-top: 12px;
+      margin-bottom: 32px;
+    }
+  
+    &__item-wrapper {
+      width: calc(33% - 20px);
+      margin-right: 30px;
+      margin-bottom: 30px;
+
+      &:nth-child(4n) {
+        margin-right: 30px;
+      }
+  
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+    }
+  
+    &__pagination {
+      margin-top: 90px;
+    }
+  }
+}
+@media screen and (max-width:1000px) {
+  .favorites-main-section {
+    margin-top: 50px;
+
+    &__pagination{
+      margin-top: 50px;
+    }
+
+    &__item-wrapper {
+      width: calc(50% - 15px);
+      &:nth-child(4n) {
+        margin-right: 30px;
+      }
+  
+      &:nth-child(3n) {
+        margin-right: 30px;
+      }
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+    }
+  }
+}
+@media screen and (max-width:600px) {
+  .favorites-main-section {
+    &__item-wrapper {
+      width: 100%;
+      margin-right: 0;
+      &:nth-child(4n) {
+        margin-right: 0px;
+      }
+  
+      &:nth-child(3n) {
+        margin-right: 0px;
+      }
+    }
+    &__pagination{
+      margin-top: 20px;
+    }
   }
 }
