--- a/styles/particles/_parent-card.scss
+++ b/styles/particles/_parent-card.scss
@@ -1,19 +1,19 @@
 .parent-card{
-  border: 1px solid #CBCBCB;
-  border-radius: 10px;
+  border: 2px solid #CBCBCB;
+  border-radius: 0.625vw;
   overflow: hidden;
   width: 100%;
 
   &__main{
-    padding: 20px;
-    padding-top: 28px;
+    padding: 1.25vw;
+    padding-top: 1.75vw;
   }
   &__name{
-    margin-bottom: 16px;
+    margin-bottom: 1vw;
   }
 
   &__img{
-    height: 200px;
+    height: 12.5vw;
     width: 100%;
     background-image: url('../../media/testDog.jpg');
     background-position: center;
@@ -24,23 +24,63 @@
     display: flex;
   }
   &__social-link{
-    margin-right: 20px;
+    margin-right: 1.25vw;
   }
   &__birth{
-    margin: 16px 0;
+    margin: 1vw 0;
   }
   &__regalia{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    margin-bottom: 16px;
-    margin-top: 12px;
+    margin-bottom: 1vw;
+    margin-top: 0.75vw;
   }
   &__regalia-item{
-    margin-right: 20px;
+    margin-right: 1.25vw;
   }
   &__pedigree{
-    display: inline-block;      
-    border-bottom: 1px dashed #AF5B29;
+    display: inline-block;
+    padding-bottom: 4px;      
+    border-bottom: 2px dashed #AF5B29;
+  }
+}
+@media screen and (max-width:1600px) {
+  .parent-card{
+    border: 1px solid #CBCBCB;
+    border-radius: 10px;
+  
+    &__main{
+      padding: 20px;
+      padding-top: 28px;
+    }
+    &__name{
+      margin-bottom: 16px;
+    }
+  
+    &__img{
+      height: 200px;
+      width: 100%;
+    }
+    &__social-links{
+      display: flex;
+    }
+    &__social-link{
+      margin-right: 20px;
+    }
+    &__birth{
+      margin: 16px 0;
+    }
+    &__regalia{
+      margin-bottom: 16px;
+      margin-top: 12px;
+    }
+    &__regalia-item{
+      margin-right: 20px;
+    }
+    &__pedigree{ 
+      padding-bottom: 2px;
+      border-bottom: 1px dashed #AF5B29;
+    }
   }
 }
