--- a/styles/particles/_search-main-section.scss
+++ b/styles/particles/_search-main-section.scss
@@ -98,7 +98,9 @@
       padding-bottom: 30px;
       opacity: 0;
       visibility: hidden;
+      transition: opacity .3s, visibility 0.3s 0.3s;
       &_active{
+        transition: opacity .3s, visibility 0s 0s;
         opacity: 1;
         visibility: visible;  
       }
