--- a/styles/particles/_social-link.scss
+++ b/styles/particles/_social-link.scss
@@ -1,5 +1,12 @@
 .social-link{
+  width: 1.875vw;
+  height: 1.875vw;
+  display: block;
   cursor: pointer;
+  svg{
+    width: 100%;
+    height: 100%;
+  }
   &:hover{
     path{
       fill:$mainHover
@@ -9,5 +16,11 @@
     path{
       fill:$mainClick
     }
+  }
+}
+@media screen and (max-width:1600px) {
+  .social-link{
+    width: 30px;
+    height: 30px;
   }
 }
