--- a/styles/particles/_header.scss
+++ b/styles/particles/_header.scss
@@ -70,7 +70,7 @@
   &__count {
     right: 0;
     transform: translateX(50%);
-    border: 2px solid $white;
+    border: 2px solid $grayBG;
     height: 1vw;
     min-width: 1vw;
     padding: 0 0.25vw;
@@ -138,7 +138,7 @@
     }
   
     &__count {
-      border: 1px solid $white;
+      border: 1px solid $grayBG;
       height: 16px;
       min-width: 16px;
       padding: 0 4px;
