first section fix

--- a/styles/particles/_first-section.scss
+++ b/styles/particles/_first-section.scss
@@ -170,7 +170,7 @@
   }
 }
 
-@media screen and (max-height:750px) {
+@media screen and (max-height:750px) and (max-width:900px){
  .first-section{
     min-height: 670px;
 
