--- a/styles/particles/_drop-down.scss
+++ b/styles/particles/_drop-down.scss
@@ -31,6 +31,9 @@
         max-height: 12.5vw;
         visibility: visible;
       }
+      &__arrow {
+        transform: rotate(180deg);
+      }
     }
 
   }
@@ -90,13 +93,16 @@
     display: flex;
     align-items: center;
     padding: 0.625vw 1.25vw;
+    svg{
+      height: 20px;
+    }
 
     &:hover {
       background-color: $mainColor;
       cursor: pointer;
       color: $white;
 
-      path {
+      path, circle {
         stroke: $white;
       }
     }
