--- a/styles/particles/_search-main-section.scss
+++ b/styles/particles/_search-main-section.scss
@@ -34,8 +34,10 @@
   }
 
   &__items-wrapper {
-    flex-grow: 2;
+    width: 100%;
     display: flex;
+    align-items: flex-start;
+    align-content: flex-start;
     flex-wrap: wrap;
   }
 
