favorite&comparison part&automatic filters&layout changes

--- a/styles/particles/_card.scss
+++ b/styles/particles/_card.scss
@@ -56,6 +56,10 @@
     font-size: 0.8235294117vw;
   }
 
+  &__cost{
+    margin-bottom: 18px;
+  }
+
   &__desc-row {
     display: flex;
     justify-content: space-between;
