--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,3 +23,4 @@
 @import './particles/location';
 @import './particles/parent-card';
 @import './particles/social-link';
+@import './particles/detail-card-desc-section';
