--- a/styles/particles/_filters.scss
+++ b/styles/particles/_filters.scss
@@ -1,11 +1,11 @@
 .filters {
   width: 100%;
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-weight: 600;
 
     &:not(:first-of-type) {
-      margin-top: 30px;
+      margin-top: 20px;
     }
   }
   &__button-drop{
@@ -36,19 +36,14 @@
 
   &__button {
     margin-top: 30px;
+    &_mobile{
+      display: none;
+    }
   }
 }
 
 @media screen and (max-width:1700px) {
   .filters {  
-    &__title {
-      margin-bottom: 20px;
-  
-      &:not(:first-of-type) {
-        margin-top: 30px;
-      }
-    }
-  
     &__checkbox-wrapper {
       margin-bottom: 2px;
     }
@@ -56,9 +51,17 @@
     &__show-all {
       margin-top: 20px;
     }
-  
+  }
+}
+@media screen and (max-width:1000px) {
+  .filters { 
     &__button {
-      margin-top: 30px;
+      &_mobile{
+        display: flex;
+      }
+      &_desk{
+        display: none;
+      }
     }
   }
 }
