--- a/styles/particles/_header.scss
+++ b/styles/particles/_header.scss
@@ -171,7 +171,7 @@
     align-items: center;
     padding-top: 113px;
     width: 100%;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     background-color: $grayBG;
     position: fixed;
     z-index: 99;
