--- a/styles/particles/_range-input.scss
+++ b/styles/particles/_range-input.scss
@@ -71,6 +71,10 @@
   &__circle {
     height: 20px;
     width: 20px;
+    min-width: 20px;
+    min-height: 20px;
+    max-width: 20px;
+    max-height: 20px;
     border: 3px solid $mainColor;
     background-color: $white;
     position: absolute;
