--- a/styles/particles/_search-main-section.scss
+++ b/styles/particles/_search-main-section.scss
@@ -35,7 +35,7 @@
   &__items-wrapper {
     width: 100%;
     display: flex;
-    align-items: flex-start;
+    // align-items: flex-start;
     align-content: flex-start;
     flex-wrap: wrap;
   }
