--- a/styles/particles/_search-main-section.scss
+++ b/styles/particles/_search-main-section.scss
@@ -137,6 +137,7 @@
 
 @media screen and (max-width:660px) {
   .search-main-section {  
+    margin-top: 20px;
     &__item-wrapper {
       width: 100%;
       margin-bottom:24px;
