--- a/styles/particles/_title-block.scss
+++ b/styles/particles/_title-block.scss
@@ -73,6 +73,8 @@
 }
 @media screen and (max-width:600px) {
   .title-block{
-    margin-bottom: 20px;
+    &__bg-dog{
+      margin-bottom: 20px;
+    }
   }
 }
